[tool.poetry]
name = "Wheather"
version = "0.1.0"
description = ""
authors = ["valilhan <ilyasovvalihan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
typer = "^0.4.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
